--- a/achobeta-infra-oauth/pom.xml
+++ b/achobeta-infra-oauth/pom.xml
@@ -3,12 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.achobeta.www</groupId>
+        <artifactId>achobeta-infra</artifactId>
+        <version>1.0-INFRA</version>
     </parent>
-    <groupId>com.achobeta.www</groupId>
     <artifactId>achobeta-infra-oauth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>achobeta-infra-oauth</name>
@@ -17,11 +15,6 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
