--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>achobeta-infra</name>
     <modules>
         <module>achobeta-infra-gateway</module>
+        <module>achobeta-infra-oauth</module>
     </modules>
     <packaging>pom</packaging>
     <description>achobeta-infra</description>
