--- a/achobeta-infra-gateway/pom.xml
+++ b/achobeta-infra-gateway/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-            <version>2022.0.1</version>
+            <version>${springcloud.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -32,11 +32,6 @@
             <artifactId>snakeyaml</artifactId>
             <version>2.0</version>
         </dependency>
-        <!-- web 相关包 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <!-- gateway 相关-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -47,6 +42,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <!-- fast json -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
 
