--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <springcloud.version>2022.0.1</springcloud.version>
+        <fastjson.version>2.0.26</fastjson.version>
     </properties>
     <dependencies>
         <!-- lombok -->
