--- a/achobeta-infra-oauth/src/main/resources/application.yml
+++ b/achobeta-infra-oauth/src/main/resources/application.yml
@@ -1,1 +1,25 @@
+server:
+  port: 8989
+  tomcat:
+    basedir: ./
+    accesslog:
+      buffered: false
+      directory: logs
+      enabled: true
+      file-date-format: .yyyy-MM-dd
+      pattern: '%h %l %u %t "%r" %s"%{Referer}i" "%{User-Agent}i" %D %{x-request-id}r %{user-id}r %{resource-id}r'
+      prefix: access_log
+      rename-on-rotate: true
+      request-attributes-enabled: false
+      rotate: true
+      suffix: .log
+
+# logger 配置
+logging:
+  level:
+    root: info
+    com:
+      achobeta:
+        www:
+          oauth: debug
 
