--- a/achobeta-infra-gateway/src/main/resources/application.yaml
+++ b/achobeta-infra-gateway/src/main/resources/application.yaml
@@ -1,5 +1,30 @@
+spring:
+  profiles:
+    # debug in local, use application-local.yaml
+    default: local
+  main:
+    # specify the type of gateway application
+    # case 'reactive' : processing requests in non-blocking mode
+    # case 'servlet' : is blocking mode
+    web-application-type: reactive
+  application:
+    name: achobeta-infra-gateway
+
+
+
+
+
+
+
+
+# ---------------------------- Try not to modify the following configurations ----------------------------
+
+# Default port number, not to change it,
+# if you need to change it for debugging,
+# you can add the startup parameter, e.g.:"-Dserver.port=(number)"
+# or create local config file to "application-local.yaml"
 server:
-  port: 8037
+  port: 4396
   tomcat:
     basedir: ./
     accesslog:
