--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <springcloud.version>2022.0.1</springcloud.version>
         <fastjson.version>2.0.26</fastjson.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
     </properties>
     <dependencies>
         <!-- lombok -->
