--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  infra-service:
+  infra-oauth-service:
     build:
         context: .
         dockerfile: ./achobeta-infra-oauth/Dockerfile
@@ -9,3 +9,12 @@ services:
       - "4396:4396"
     volumes:
     - ./logs:/logs # 创建容器数据卷
+  infra-gateway-service:
+    build:
+      context: .
+      dockerfile: ./achobeta-infra-gateway/Dockerfile
+    image: achobeta/achobeta-infra-gateway:latest
+    ports:
+      - "4399:4399"
+    volumes:
+      - ./logs:/logs # 创建容器数据卷
